# Fenrir-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
config/: fenrir.conf
src/: config.cpp  config.h  file_checker.cpp  file_checker.h  hash_utils.cpp  hash_utils.h  ioc_reader.cpp  ioc_reader.h  logger.cpp  logger.h  main.cpp  scanner.cpp  scanner.h  utils.cpp  utils.h
